[package]
name = "adrnaln"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = "0.5.6"
log = "0.4.21"
tokio = { version="1.37.0", features = ["full"]}
rand = "0.9.0-alpha.1"
bincode = { version = "1.3.3", features = ["i128"] }
serde = { version = "1.0.197", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
opentelemetry = "0.22"
opentelemetry_sdk  = { version = "0.22.1", features = ["rt-tokio"]}
opentelemetry-otlp = "0.15.0"
opentelemetry-semantic-conventions = "0.14.0"
opentelemetry-stdout = { version = "0.3", features = ["trace"] }
opentelemetry-jaeger-propagator = "0.1.0"
opentelemetry-jaeger = { version = "*", features = ["rt-tokio"] }
opentelemetry-zipkin = "0.20.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-opentelemetry = "0.23.0"
[dev-dependencies]
env_logger = "*"
