[package]
name = "adrnaln"
version = "0.1.0"
edition = "2021"
description = "Adrnaln is a library for UDP packet transfers with high level constructs for managing sequences of data"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = "0.5.6"
log = "0.4.21"
tokio = { version = "1", features = ["full", "tracing"] }
opentelemetry = "0.17.0"
# Integration between the tracing crate and the opentelemetry crate
tracing-opentelemetry = "0.17.2"
# Allows you to export data to Jaeger
opentelemetry-jaeger = "0.16.0"
rand = "0.9.0-alpha.1"
bincode = { version = "1.3.3", features = ["i128"] }
serde = { version = "1.0.197", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
tracing = "0.1.40"
signal-hook = "0.3.17"
tracing-subscriber = "0.3.18"
[dev-dependencies]
env_logger = "*"
